<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_vertical">


        <Button
            android:id="@+id/simpleNotif"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/simple_notification"
            />

        <Button
            android:id="@+id/bigStyleNotif"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_style_notification"
            android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/bigPictureStyle"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/big_picture_notification"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/InboxStyle"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inboxstyle_notification"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/ActionNotification"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_notification"
        android:layout_marginTop="20dp"/>

</LinearLayout>